# paperdash-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml.example  config.json.example
.github/workflows/: build-armv7.yaml  build.yaml
doc/: drawings.drawio
src/: main.rs
src/modules/: config.rs  mod.rs  screenshot.rs
