[package]
name = "paperdash-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rocket = "0.5.0-rc.2"
image = "0.24.6"
serde = {version="1.0.171", features=["derive"]}
serde_json = "1.0.102"
lazy_static = "1.4.0"
urlencoding = "2.1.2"
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
